[package]
name = "polly"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt"] }
clap = { version = "4.5.40", features = ["derive"] }
colog = "1.3.0"
log = "0.4.27"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.31"
